fix faq for tablet
make lower margin of faq section larger to prevent overlap

--- a/style.css
+++ b/style.css
@@ -656,7 +656,7 @@ body {
   }
 
   .faq{
-    margin-bottom: -5vh;
+    margin-bottom: 0vh;
   }
 
   .answer{
